tests/fixtures/invalid/min_int_str.py
# Cannot call min() with Int, Str
x = min(1, "hello")
